--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NiyamaShakthi AI</title>
+    <title>NiyamaShakthi AI - Legal Intelligence Hub</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <!-- Adding a modern font from Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts for a modern, sleek design -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Sidebar (Chat History) -->
     <aside class="sidebar">
-        <h2>Chat Sessions</h2>
+        <h2>Chat History</h2>
         <div id="chat-history">
-            <!-- Example of a chat session item -->
+            <!-- Example Chat Sessions -->
             <div class="chat-session">Session 1</div>
         </div>
         <button id="clear-chat" aria-label="Clear chat history">🗑️ Clear Chat</button>
@@ -25,15 +25,14 @@
     <main class="chat-container">
         <!-- Header -->
         <header class="chat-header">
-            <h1>NiyamaShakthi AI</h1>
+            <h1>⚖️ NiyamaShakthi AI</h1>
             <button id="toggle-sidebar" aria-label="Toggle sidebar">☰</button>
         </header>
 
         <!-- Chat Messages -->
         <section id="chat-box">
-            <!-- Example of a chat message -->
             <div class="message bot-message">
-                <p>Hi there! I'm here to help with you legal questions.</p>
+                <p>Welcome! I am your legal assistant. How can I assist you today?</p>
             </div>
         </section>
 
@@ -42,7 +41,7 @@
             <input type="file" id="file-input" class="hidden" aria-label="Upload file">
             <label for="file-input" class="file-btn" aria-label="Attach file">📎</label>
             
-            <input type="text" id="user-input" placeholder="Type your message..." autofocus aria-label="Type your message">
+            <input type="text" id="user-input" placeholder="Ask a legal question..." autofocus aria-label="Type your message">
             
             <button id="voice-btn" aria-label="Voice input">🎤</button>
             <button id="send-btn" aria-label="Send message">➤</button>
